--- a/blogs.html
+++ b/blogs.html
@@ -55,10 +55,10 @@
                     <div class="header__menu-div">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
-                                <a href="/index.html" class="header__menu-link">TRANG CHỦ</a>
+                                <a href="./index.html" class="header__menu-link">TRANG CHỦ</a>
                             </li>
                             <li class="header__menu-item">
-                                <a href="/introduce.html" class="header__menu-link">GIỚI THIỆU</a>
+                                <a href="./introduce.html" class="header__menu-link">GIỚI THIỆU</a>
                             </li>
                             <li class="header__menu-item">
                                 <a href="./product.html" class="header__menu-link">ĐỒNG HỒ NAM</a>
