--- a/blogs.html
+++ b/blogs.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__menu">
+                <div id="header__menu" class="header__menu fade-top">
                     <div class="header__menu-div">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
@@ -76,8 +76,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
         <div class="header__app">
             <div class="header__app-menu">
@@ -138,8 +136,8 @@
         <div class="blogs__main">
             <div class="blogs__container">
                 <h2 class="blogs__h2">BLOGS</h2>
-                <div class="blogs__grid">
-                    <div class="blogs__wraper">
+                <div class="blogs__grid ">
+                    <div class="blogs__wraper reveal fade-left">
                         <div class="blogs__left">
                             <div class="blogs__search">
                                 <input type="text" placeholder="Tim kiem... " class="blogs__input">
@@ -213,7 +211,7 @@
                         </div>
                     </div>
                     <div class="blogs__conten-poster">
-                        <div class="blogs__poster">
+                        <div class="blogs__poster reveal fade-right ">
                             <div class="blogs__poster-banner">
                                 <img src="./acsset/img/blog.jpg" alt="" class="poster__img">
                             </div>
@@ -225,7 +223,7 @@
                                 <span class="poster__span">Đối với một số doanh nhân, một chiếc đồng hồ đeo tay không chỉ là thiết bị xem giờ. Thực tế, nó là một thông điệp.</span>
                             </div>
                         </div>
-                        <div class="blogs__poster">
+                        <div class="blogs__poster reveal ">
                             <div class="blogs__poster-banner">
                                 <img src="./acsset/img/trend-2.jpg" alt="" class="poster__img">
                             </div>
@@ -237,7 +235,7 @@
                                 <span class="poster__span">Công nghiệp sản xuất đồng hồ sang trọng có dấu hiệu chững lại trong hai năm gần đây do nhu cầu giảm. Tuy nhiên, có một điểm sáng đó chính là dòng sản phẩm dành cho nữ giới vẫn duy trì được giá trị qua mọi giai đoạn.</span>
                             </div>
                         </div>
-                        <div class="blogs__poster">
+                        <div class="blogs__poster reveal fade-right">
                             <div class="blogs__poster-banner">
                                 <img src="./acsset/img/new-3 (1).jpg" alt="" class="poster__img">
                             </div>
@@ -250,7 +248,7 @@
                                     Được thành lập vào năm 1875 bởi Jules-Louis Audemars và Edward-Auguste Piguet, Audemars Piguet sản xuất ra 36.000 chiếc đồng hồ mỗi năm. Đây chính là thương hiệu đồng hồ đầu tiên tạo ra chiếc đồng hồ thể thao bằng thép vào năm 1972 (tên là Royal Oak). Sau đó, đến năm 1993, chính thương hiệu Audemars Piguet cũng là người tiên phong trình làng chiếc đồng hồ đeo tay ngoại cỡ đầu tiên có tên Royal Oak Offshore.</span>
                             </div>
                         </div>
-                        <div class="blogs__poster">
+                        <div class="blogs__poster reveal fade-right">
                             <div class="blogs__poster-banner">
                                 <img src="./acsset/img/blogs.jpg" alt="" class="poster__img">
                             </div>
@@ -262,7 +260,7 @@
                                 <span class="poster__span">Đối với một số doanh nhân, một chiếc đồng hồ đeo tay không chỉ là thiết bị xem giờ. Thực tế, nó là một thông điệp.</span>
                             </div>
                         </div>
-                        <div class="blogs__poster">
+                        <div class="blogs__poster reveal fade-right">
                             <div class="blogs__poster-banner">
                                 <img src="./acsset/img/news-1.jpg" alt="" class="poster__img">
                             </div>
@@ -278,10 +276,10 @@
                 </div>
                 <div class="main__selection">
                     <div class="main__select">
-                        <div class="selection__conten">
+                        <div class="selection__conten reveal fade-left">
                             <h2 class="selection__register">ĐĂNG KÝ NHẬN THÔNG TIN</h2>
                         </div>
-                        <div class="selection__input">
+                        <div class="selection__input reveal fade-right">
                             <input type="text" class="selection__btn" placeholder="Email">
                             <div class="class__btn">
                                 <a href="" class="class__link">ĐĂNG KÝ</a>
@@ -416,5 +414,6 @@
         </div>
     </div>
 </body>
+<script src="./javascrip/register.js"></script>
 
 </html>
