--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__menu">
+                <div id="header__menu" class="header__menu fade-top">
                     <div class="header__menu-div">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
@@ -141,8 +141,8 @@
                     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29684.100886770877!2d105.79374779806658!3d21.56590494692312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313520cb6186b29b%3A0xa2c732e8778780ac!2zVGjhu4tuaCDEkMOhbiwgVGjDoG5oIHBo4buRIFRow6FpIE5ndXnDqm4sIFRow6FpIE5ndXnDqm4sIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1656697753215!5m2!1svi!2s"
                         width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="contact__address">
-                    <div class="contact__address-item">
+                <div class="contact__address reveal ">
+                    <div class="contact__address-item ">
                         <div class="contact__svg">
                             <svg class="svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 440 440" style="enable-background:new 0 0 440 440; fill:#fff" xml:space="preserve">
                                 <g>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact__info">
+                <div class="contact__info reveal ">
                     <div class="contact__input">
                         <input type="text" class="contact__input-name" placeholder="Họ và tên">
                     </div>
@@ -315,12 +315,12 @@
                         <input type="submit" value="Gửi" class="contact__btn" placeholder="Lời nhắn">
                     </div>
                 </div>
-                <div class="main__selection">
+                <div class="main__selection ">
                     <div class="main__select">
-                        <div class="selection__conten">
+                        <div class="selection__conten  reveal fade-left">
                             <h2 class="selection__register">ĐĂNG KÝ NHẬN THÔNG TIN</h2>
                         </div>
-                        <div class="selection__input">
+                        <div class="selection__input reveal fade-right">
                             <input type="text" class="selection__btn" placeholder="Email">
                             <div class="class__btn">
                                 <a href="" class="class__link">ĐĂNG KÝ</a>
@@ -455,5 +455,5 @@
         </div>
     </div>
 </body>
-
+<script src="./javascrip/register.js"></script>
 </html>
