--- a/introduce.html
+++ b/introduce.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__menu">
+                <div id="header__menu" class="header__menu fade-top">
                     <div class="header__menu-div">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
@@ -136,18 +136,18 @@
             </div>
         </div>
         <div class="main">
-            <div class="main__grid intro">
-                <div class="div__img">
+            <div class="main__grid intro  ">
+                <div class="div__img reveal fade-left">
                     <img class="intro__img" src="./acsset/img/about-us_bg.jpg" alt="">
                 </div>
-                <div class="intro__conten">
+                <div class="intro__conten reveal fade-right ">
                     <h2 class="intro__h2">Giới thiệu về Watch Mona</h2>
                     <p class="intro__p">“Cùng với sự phát triển không ngừng của thời trang thế giới, rất nhiều thương hiệu cho ra đời những mẫu đồng hồ nam chính hãng đa dạng về phong cách, kiểu dáng, màu sắc, kích cỡ… Một chiếc đồng hồ nam cao cấp chính hãng khắc họa một
                         giá trị đích thực khi nói đến phụ kiện xa xỉ dành cho phái mạnh. Hiện nay, đồng hồ là phụ kiện thời trang thiết yếu đối với những người đàn ông hiện đại ngày nay. Trên cổ tay của những người đàn ông thành đạt luôn dành vị trí cho
                         một chiếc đồng hồ nam cao cấp.”</p>
                 </div>
             </div>
-            <div class="main__intro">
+            <div class="main__intro reveal ">
                 <div class="intro__grid">
                     <div class="intro__columns-6">
                         <div class="intro__colum">
@@ -447,7 +447,7 @@
                     </div>
                 </div>
             </div>
-            <div class="intro__banner">
+            <div class="intro__banner reveal">
                 <div class="intro__banner-main">
                     <img src="./acsset/img/banner-portfolio.jpg" alt="" class="intro__img">
                 </div>
@@ -471,9 +471,9 @@
                     </div>
                 </div>
             </div>
-            <div class="intro__user-name">
+            <div class="intro__user-name ">
                 <div class="intro__user">
-                    <div class="intro__user-columns">
+                    <div class="intro__user-columns reveal fade-left">
                         <div class="intro__user-img">
                             <img src="./acsset/img/customer-2-150x150.png" alt="" class="user__img-avt">
                         </div>
@@ -482,7 +482,7 @@
                             <h3 class="intro__name">Thúy Kiều</h3>
                         </div>
                     </div>
-                    <div class="intro__user-columns">
+                    <div class="intro__user-columns reveal">
                         <div class="intro__user-img">
                             <img src="./acsset/img/customer-3-150x150.png" alt="" class="user__img-avt">
                         </div>
@@ -491,7 +491,7 @@
                             <h3 class="intro__name">Thúy Vân</h3>
                         </div>
                     </div>
-                    <div class="intro__user-columns">
+                    <div class="intro__user-columns reveal fade-right">
                         <div class="intro__user-img">
                             <img src="./acsset/img/customer-4-150x150.png" alt="" class="user__img-avt">
                         </div>
@@ -502,11 +502,11 @@
                     </div>
                 </div>
                 <div class="main__selection">
-                    <div class="main__select">
-                        <div class="selection__conten">
+                    <div class="main__select ">
+                        <div class="selection__conten reveal fade-left">
                             <h2 class="selection__register">ĐĂNG KÝ NHẬN THÔNG TIN</h2>
                         </div>
-                        <div class="selection__input">
+                        <div class="selection__input reveal fade-right">
                             <input type="text" class="selection__btn" placeholder="Email">
                             <div class="class__btn">
                                 <a href="" class="class__link">ĐĂNG KÝ</a>
@@ -640,5 +640,6 @@
             </div>
         </div>
     </div>
+    <script src="./javascrip/register.js"></script>
 </body>
 </html>
