--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__menu">
+                <div id="header__menu" class="header__menu fade-top">
                     <div class="header__menu-div">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
