--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
                                 <a href="./blogs.html" class="header__menu-link">BLOGS</a>
                             </li>
                             <li class="header__menu-item">
-                                <a href="" class="header__menu-link">LIÊN HỆ</a>
+                                <a href="./contact.html" class="header__menu-link">LIÊN HỆ</a>
                             </li>
                         </ul>
                     </div>
